--- a/frontend/public/css.css
+++ b/frontend/public/css.css
@@ -130,6 +130,9 @@ button:hover {
 .contact > a:hover {
   color: #333333;
 }
+#app {
+  background: transparent !important;
+}
 
 @media only screen and (max-width: 768px) {
   body {
