--- a/frontend/public/css.css
+++ b/frontend/public/css.css
@@ -7,7 +7,7 @@ body {
 }
 
 body {
-  background-color: #7473bd;
+  background-color: white;
 }
 
 h1,
@@ -28,11 +28,16 @@ h1 {
 h2 {
   margin-bottom: 0.2em;
   font-size: 2em;
+  margin-top: 30px;
 }
 
 h3 {
   font-size: 1.2em;
   opacity: 0.8;
+}
+
+a {
+  color: #7473bd !important;
 }
 
 input,
